src/main/resources/tests/Semantics/bad/recordChamps1.canAda
with Ada.Text_IO; use Ada.Text_IO;

procedure UseRecord is
   type RecordTest is record
      Field1 : integer;
   end record;
   Var1 : RecordTest;
begin
    put(Var1.Field2);
end UseRecord;